# News_Engine

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOY_ORACLE.md  DEPLOY_VERCEL.md  DESIGN.md  Dockerfile  MANIFEST.in  Makefile  README.md  VERCEL_DEPLOYMENT.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  test_nlp_core.py  vercel.json
analysis/: __init__.py  sentiment_stock_correlation.py
api/: index.py
config/: models.py  settings.py
data/analysis/: report.md
data/events/: 19394028-f28f-41b5-bdbb-23dc003c6dc9.json  45a44b36-9017-4ea3-9fd2-c70a3332acd8.json  542932d1-bc68-4349-bdc1-34411c32bf3a.json  757185f9-9f90-4883-af5d-00bc89f142dd.json  7cdf6240-8893-4cd3-a053-832e38a135c6.json  8d73a74a-f05c-49a9-99f6-3e8fd70f49d3.json  a06b14ce-246d-4b19-a209-0cdace1e86d7.json  ba55b43d-4add-4692-a2df-02a1881352e2.json  cdf524c9-29e9-40c6-bcf3-6aa83e378930.json  ebc116b8-abf0-4ad8-b63d-1c3ce63a1c01.json
data/nlp_processed/: 01c72ef4-ca6d-46f5-a064-3c74bfa188d7.json  03750f5f-098a-4f67-b9c7-553f4e335d1a.json  045cc554-3b9d-4873-bf49-342f02f7b4d9.json  078ca34f-8f33-495c-921b-d63f1d3303b5.json  078f128c-0dd3-4101-8ba9-48c8aba15c6c.json  0c545c48-9e62-414b-91c5-49dea5023945.json  1425746e-41f5-437f-96fd-8151bd284cea.json  150e246e-4f59-4614-983d-03c981a0e13c.json  18920183-a4a9-4f9a-9af1-907ed46f0bc5.json  1a50d125-2b66-47f7-9ada-fd8659812848.json  1a6ef7af-3749-43d8-809b-4cbabb88f38f.json  1ac379f7-6e6b-422d-a57f-f2de82b800e4.json  1c37c978-667f-426b-a4a1-38fa60ac5cdb.json  1fd669ae-c6c8-425f-8cb7-2dadc39f0f92.json  212c963c-4dff-426d-9216-3e94650d1d2a.json  (+116 more)
docs/: runbook.md
ingestion/: fetcher.py  redis_queue.py
migrations/: env.py
nlp/: clusterer.py  embedder.py  normalise.py  processor.py
pipeline/: api.py  runner.py
static/: index.html
storage/: store.py
tests/: conftest.py
(+217 files in other folders)
